// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders disabled with defaultChecked 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c4 {
  outline: none;
}

.c6 {
  outline: none;
}

.c5 {
  outline: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: not-allowed;
  background-color: inherit;
  color: #c0cad5;
}

.c1 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c1 svg[data-name='checked'] {
  display: none;
}

.c1 svg[data-name='indeterminate'] {
  display: none;
}

.c1 ~ span {
  cursor: not-allowed;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='indeterminate'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input[data-indeterminate='true']:hover ~ svg[data-name='indeterminate'] {
  color: #c0cad5;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='checked'] {
  display: none;
}

.c1 > input:not([data-indeterminate='true']) ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c1 > input:not([data-indeterminate='true']):focus-visible ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1 > input:checked:not([data-indeterminate='true']) ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input:checked:not([data-indeterminate='true']) ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:checked:not([data-indeterminate='true']):focus-visible ~ svg {
  border: 1px solid #0068ef;
  background-color: #e8f2ff;
}

.c1 > input:checked:not([data-indeterminate='true']):hover ~ svg[data-name='checked'] {
  color: #c0cad5;
}

.c1 > input:hover ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="primary"
      disabled=""
    >
      <input
        checked=""
        class="c2"
        color="primary"
        data-indeterminate="false"
        disabled=""
        id="check-box"
        role="checkbox"
        size="20"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="c3 c4"
        data-name="checked"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M424-424l-86-86q-11-11-28-11t-28 11q-11 11-11 28t11 28l114 114q12 12 28 12t28-12l226-226q11-11 11-28t-11-28q-11-11-28-11t-28 11L424-424zM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c5"
        data-name="indeterminate"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M320-440h320q17 0 28.5-11.5T680-480q0-17-11.5-28.5T640-520H320q-17 0-28.5 11.5T280-480q0 17 11.5 28.5T320-440zM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200zm0-80h560v-560H200v560zm0-560v560-560z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c6"
        data-name="empty"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200zm0-80h560v-560H200v560z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders disabled with disabled prop 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c4 {
  outline: none;
}

.c6 {
  outline: none;
}

.c5 {
  outline: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: not-allowed;
  background-color: inherit;
  color: #c0cad5;
}

.c1 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c1 svg[data-name='checked'] {
  display: none;
}

.c1 svg[data-name='indeterminate'] {
  display: none;
}

.c1 ~ span {
  cursor: not-allowed;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='indeterminate'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input[data-indeterminate='true']:hover ~ svg[data-name='indeterminate'] {
  color: #c0cad5;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='checked'] {
  display: none;
}

.c1 > input:not([data-indeterminate='true']) ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c1 > input:not([data-indeterminate='true']):focus-visible ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1 > input:checked:not([data-indeterminate='true']) ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input:checked:not([data-indeterminate='true']) ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:checked:not([data-indeterminate='true']):focus-visible ~ svg {
  border: 1px solid #0068ef;
  background-color: #e8f2ff;
}

.c1 > input:checked:not([data-indeterminate='true']):hover ~ svg[data-name='checked'] {
  color: #c0cad5;
}

.c1 > input:hover ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="primary"
      disabled=""
    >
      <input
        class="c2"
        color="primary"
        data-indeterminate="false"
        disabled=""
        id="check-box"
        role="checkbox"
        size="20"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="c3 c4"
        data-name="checked"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M424-424l-86-86q-11-11-28-11t-28 11q-11 11-11 28t11 28l114 114q12 12 28 12t28-12l226-226q11-11 11-28t-11-28q-11-11-28-11t-28 11L424-424zM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c5"
        data-name="indeterminate"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M320-440h320q17 0 28.5-11.5T680-480q0-17-11.5-28.5T640-520H320q-17 0-28.5 11.5T280-480q0 17 11.5 28.5T320-440zM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200zm0-80h560v-560H200v560zm0-560v560-560z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c6"
        data-name="empty"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200zm0-80h560v-560H200v560z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders without the theme passed specifically 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c4 {
  outline: none;
}

.c6 {
  outline: none;
}

.c5 {
  outline: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: pointer;
  background-color: inherit;
  color: #5e6872;
}

.c1 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c1 svg[data-name='checked'] {
  display: none;
}

.c1 svg[data-name='indeterminate'] {
  display: none;
}

.c1 ~ span {
  cursor: pointer;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='indeterminate'] {
  display: inline-block;
  color: #0068ef;
}

.c1 > input[data-indeterminate='true']:hover ~ svg[data-name='indeterminate'] {
  color: #049;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input[data-indeterminate='true'] ~ svg[data-name='checked'] {
  display: none;
}

.c1 > input:not([data-indeterminate='true']) ~ svg[data-name='empty'] {
  color: #4f6f8f;
}

.c1 > input:not([data-indeterminate='true']):focus-visible ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1 > input:checked:not([data-indeterminate='true']) ~ svg[data-name='checked'] {
  display: inline-block;
  color: #0068ef;
}

.c1 > input:checked:not([data-indeterminate='true']) ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:checked:not([data-indeterminate='true']):focus-visible ~ svg {
  border: 1px solid #0068ef;
  background-color: #e8f2ff;
}

.c1 > input:checked:not([data-indeterminate='true']):hover ~ svg[data-name='checked'] {
  color: #049;
}

.c1 > input:hover ~ svg[data-name='empty'] {
  color: #0068ef;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="primary"
    >
      <input
        class="c2"
        color="primary"
        data-indeterminate="false"
        id="check-box"
        role="checkbox"
        size="20"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="c3 c4"
        data-name="checked"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M424-424l-86-86q-11-11-28-11t-28 11q-11 11-11 28t11 28l114 114q12 12 28 12t28-12l226-226q11-11 11-28t-11-28q-11-11-28-11t-28 11L424-424zM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c5"
        data-name="indeterminate"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M320-440h320q17 0 28.5-11.5T680-480q0-17-11.5-28.5T640-520H320q-17 0-28.5 11.5T280-480q0 17 11.5 28.5T320-440zM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200zm0-80h560v-560H200v560zm0-560v560-560z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c6"
        data-name="empty"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 -960 960 960"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200zm0-80h560v-560H200v560z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
